# GUDHI--TDA-tutorial

./: Tuto-GUDHI-Barycenters-of-persistence-diagrams.ipynb  Tuto-GUDHI-cover-complex.ipynb  pyproject.toml
